<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent"
    android:orientation="vertical">


    <TextView
        android:id="@+id/classicInfoTitle"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:autoSizeTextType="uniform"
        android:textAlignment="center"
        android:fontFamily="@font/jost_variablewght"
        android:text="Classic"
        android:textColor="@color/white"
        android:textFontWeight="700"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="10dp"
        android:src="@drawable/grid2x2"/>

    <TextView
        android:id="@+id/classicInfoDesc"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:autoSizeTextType="uniform"
        android:fontFamily="@font/jost_variablewght"
        android:text="@string/classicExplanation"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/classicInfoTitle"
        app:layout_constraintVertical_bias="0.0" />


    <TextView
        android:id="@+id/timedInfoTitle"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:textAlignment="center"
        android:autoSizeTextType="uniform"
        android:fontFamily="@font/jost_variablewght"
        android:text="Timed"
        android:textColor="@color/white"
        android:textFontWeight="700"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/classicInfoDesc"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="10dp"
        android:src="@drawable/stopwatch"/>

    <TextView
        android:id="@+id/timedInfoDesc"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:autoSizeTextType="uniform"
        android:fontFamily="@font/jost_variablewght"
        android:text="@string/timedExplanation"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timedInfoTitle"
        app:layout_constraintVertical_bias="0.0" />


    <TextView
        android:id="@+id/reflexInfoTitle"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:autoSizeTextType="uniform"
        android:fontFamily="@font/jost_variablewght"
        android:text="Reflex"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textFontWeight="700"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timedInfoDesc"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="10dp"
        android:src="@drawable/fast_hand"/>

    <TextView
        android:id="@+id/reflexInfoDesc"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:autoSizeTextType="uniform"
        android:fontFamily="@font/jost_variablewght"
        android:text="@string/reflexExplanation"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reflexInfoTitle"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/positive_button"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="50dp"
        android:autoSizeTextType="uniform"
        android:background="@drawable/rectangle_medium"
        android:fontFamily="@font/jost_variablewght"
        android:padding="10dp"
        android:text="CLOSE"
        android:textColor="@color/white"
        android:textFontWeight="700"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reflexInfoDesc"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintWidth_percent="0.5" />

</LinearLayout>